# pani

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  db.py  engine.py  models.py
src/pipeline/: __init__.py  analyst.py  data_collector.py  scanner.py  sentinel.py
tests/: __init__.py
