[project]
name = "futures-intel"
version = "0.1.0"
description = "Crypto futures trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "vectorbt>=0.26.0",
    "duckdb>=0.9.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.scripts]
futures-intel = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
